<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:id="@+id/activity_mode">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:text="@string/mode_question"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/simonsays_button"
        tools:text="@string/simon_says"
        android:text="@string/simon_says" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playeradds_button"
        tools:text="@string/player_adds"
        android:text="@string/player_adds" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choosecolor_button"
        tools:text="@string/choose_color"
        android:text="@string/choose_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/high_score_tv"
        android:textAlignment="center"
        android:layout_marginTop="35sp"
        android:textSize="19sp"
        android:layout_marginBottom="10sp"
        android:text="@string/high_Score_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sshlabel_tv"
        android:layout_marginBottom="0dp"
        android:textSize="13sp"
        android:textAlignment="center"
        android:text="@string/ssh_label" />

    <TextView
        android:text="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ssh_score_tv"
        android:textAlignment="center"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/pah_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pahlabel_tv"
        android:layout_marginBottom="0dp"
        android:textSize="13sp"
        android:textAlignment="center" />

    <TextView
        android:text="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pah_score_tv"
        android:textAlignment="center"
        android:layout_marginBottom="15dp" />

    <TextView
        android:text="@string/cyc_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cyclabel_tv"
        android:textSize="13sp"
        android:textAlignment="center" />

    <TextView
        android:text="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cych_score_tv"
        android:textAlignment="center"
        android:layout_marginBottom="15dp" />
</LinearLayout>